--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,22 @@
   background-size: cover;
 }
 
+.cardContainer{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  pointer-events: none;
+}
+
 .btnContainer{
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+.carousel{
+  pointer-events: auto;
 }
