--- a/src/components/profileCardsNext/profileCardsNext.styles.css
+++ b/src/components/profileCardsNext/profileCardsNext.styles.css
@@ -1,23 +1,30 @@
-.profileCardContainer {
+.nextProfileCardContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 410px;
+  width: 220px;
   border-radius: 25px;
   padding: 30px;
   border: 2px solid #1d3354;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
   background-color: #e9fff9;
+  transform: translate(-90px, 0px);
+  z-index: -1000;
+  height: 330px;
+  overflow: hidden;
+  overflow-x: hidden;
+  opacity: 50%;
+  pointer-events: auto;
 }
 
-.imageContainer {
-  position: relative;
-  height: 150px;
-  width: 150px;
+.nextImageContainer {
+  position:relative;
+  height: 85px;
+  width: 85px;
 }
 
-.profilePic {
+.nextProfilePic {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -27,21 +34,25 @@
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
 }
 
-.mainHeading,
-.bodyText {
+.nextMainHeading,
+.nextBodyText {
   font-family: "Poppins";
 }
 
-.mainHeading {
-  font-size: 18px;
-  margin: 15px 0 0 0;
+.nextMainHeading {
+  font-size: 9px;
+  margin: 15px 0 15px 0;
 }
 
-.bodyText {
-  font-size: 14px;
+.nextBodyText{
+  font-size: 8px;
+  margin-bottom: 15px;
+}
+
+.nextInfoLabel {
   text-align: center;
 }
 
-span {
+.nextInfoLabel {
   font-style: italic;
 }
